--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.8.7",
+    "@babel/plugin-transform-async-to-generator": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -25,6 +27,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@babel/runtime": "^7.8.7",
     "babel-polyfill": "^6.26.0",
     "d3": "^5.15.0",
     "d3-scale": "^3.2.1"
